--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "query-string": "^7.0.0",
     "stripe": "^8.144.0"
   }
 }
